--- a/styles/booking.css
+++ b/styles/booking.css
@@ -130,7 +130,7 @@ form input[type = submit]:hover{
     padding: 100px;
     background-color: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 4vw;
+    font-size: 2vw;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -141,10 +141,10 @@ form input[type = submit]:hover{
 
 
 
-@media(min-width: 500px){
+@media(max-width: 995px){
     .card-container{
         grid-template-columns: 100%;
-        width: 2vw;
+        width: 100vw;
     }
     .card-img{
         height: 330px;
